Refactor image filenames (remove spaces), fix HTML validation issues, and update pages

--- a/about-us.html
+++ b/about-us.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us | Elementa Voyagés</title>
   <!-- Link to about page stylesheet -->
-  <link rel="stylesheet" href="about.css" />
+  <link rel="stylesheet" href="about.css">
 </head>
 <body>
   <!-- Top Header: Logo and navigation -->
-  <header class="top-header" role="banner">
+  <header class="top-header">
     <div class="logo-container">
       <!-- Logo linking back to home page -->
       <a href="index.html" aria-label="Go to home page">
-        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo" />
+        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo">
       </a>
     </div>
-    <nav class="nav-links" role="navigation" aria-label="Main site navigation">
+    <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="test-explore.html">Explore</a>
       <a href="mailto:info@elementavoyages.com">Contact</a>
@@ -24,7 +24,7 @@
   </header>
 
   <!-- Main Content Area -->
-  <main class="about-container" role="main">
+  <main class="about-container">
     <!-- Intro Section: Who We Are -->
     <section class="intro" aria-labelledby="intro-title">
       <h2 id="intro-title">Who We Are</h2>
@@ -56,99 +56,88 @@
       </div>
       <!-- Image of the team -->
       <div class="story-image">
-        <img src="about-image/staff.png" alt="Our Team" />
+        <img src="about-image/staff.png" alt="Our Team">
       </div>
     </section>
 
-<section class="values" aria-labelledby="values-title">
-  <h2 id="values-title">What We Value</h2>
-  <div class="values-grid">
-    <!-- Individual Value Card: Luxury -->
-    <div class="value-card">
-      <img src="about-image/italy.jpg" alt="Luxury" />
-      <h3>Luxury</h3>
-      <p>Every detail matters. We craft experiences that feel effortless, elegant, and unforgettable.</p>
-    </div>
-
-    <!-- Individual Value Card: Authenticity -->
-    <div class="value-card">
-      <img src="front-page-image/macaw-birds-couple-colorful-jungle-love-birds-tropical-3840x2160-7464.jpg" alt="Authenticity" />
-      <h3>Authenticity</h3>
-      <p>Our trips are rooted in real culture and community, making your journey authentic and unique.</p>
-    </div>
-
-    <!-- Individual Value Card: Exploration -->
-    <div class="value-card">
-      <img src="about-image/switzerland.jpg" alt="Exploration" />
-      <h3>Exploration</h3>
-      <p>We celebrate curiosity — helping travelers step into new worlds and discover hidden gems.</p>
-    </div>
-  </div>
-</section>
-</main>
+    <section class="values" aria-labelledby="values-title">
+      <h2 id="values-title">What We Value</h2>
+        <div class="values-grid">
+          <!-- Individual Value Card: Luxury -->
+          <div class="value-card">
+           <img src="about-image/italy.jpg" alt="Luxury">
+           <h3>Luxury</h3>
+           <p>Every detail matters. We craft experiences that feel effortless, elegant, and unforgettable.</p>
+          </div>
+          <!-- Individual Value Card: Authenticity -->
+          <div class="value-card">
+            <img src="front-page-image/macaw-birds-couple-colorful-jungle-love-birds-tropical-3840x2160-7464.jpg" alt="Authenticity">
+            <h3>Authenticity</h3>
+            <p>Our trips are rooted in real culture and community, making your journey authentic and unique.</p>
+          </div>
+          <!-- Individual Value Card: Exploration -->
+          <div class="value-card">
+            <img src="about-image/switzerland.jpg" alt="Exploration">
+            <h3>Exploration</h3>
+            <p>We celebrate curiosity — helping travelers step into new worlds and discover hidden gems.</p>
+          </div>
+        </div>
+    </section>
+  </main>
 
 
-<footer class="site-footer" role="contentinfo">
-  <div class="footer-container">
-    <!-- Column 1: Logo & About -->
-    <div class="footer-column">
-      <div class="footer-logo">
-        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo">
+  <footer class="site-footer">
+    <div class="footer-container">
+      <!-- Column 1: Logo & About -->
+      <div class="footer-column">
+        <div class="footer-logo">
+          <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo">
+        </div>
+        <p class="footer-tagline">
+          Curated journeys, luxurious stays, and unforgettable experiences.
+        </p>
       </div>
-      <p class="footer-tagline">
-        Curated journeys, luxurious stays, and unforgettable experiences.
-      </p>
-    </div>
-    
-    <!-- Column 2: Quick Links -->
-    <div class="footer-column" aria-labelledby="footer-links-title">
-      <h4 id="footer-links-title">Explore</h4>
-      <ul class="footer-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="test-explore.html">Destinations</a></li>
-        <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
-      </ul>
-    </div>
-
-    <!-- Column 3: Newsletter & Social -->
-    <div class="footer-column" aria-labelledby="footer-newsletter-title">
-      <h4 id="footer-newsletter-title">Stay Connected</h4>
-      <p>Join our newsletter for travel inspiration & exclusive offers.</p>
-      <form class="footer-newsletter" role="form" aria-label="Subscribe to newsletter">
-        <input type="email" placeholder="Enter your email" aria-label="Email address">
-        <button type="submit">Subscribe</button>
-      </form>
-      <div class="footer-social" role="navigation" aria-label="Social media links">
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+      <!-- Column 2: Quick Links -->
+      <div class="footer-column" aria-labelledby="footer-links-title">
+        <h4 id="footer-links-title">Explore</h4>
+        <ul class="footer-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="test-explore.html">Destinations</a></li>
+          <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Column 3: Newsletter & Social -->
+      <div class="footer-column" aria-labelledby="footer-newsletter-title">
+        <h4 id="footer-newsletter-title">Stay Connected</h4>
+        <p>Join our newsletter for travel inspiration & exclusive offers.</p>
+        <form class="footer-newsletter">
+          <input type="email" placeholder="Enter your email" aria-label="Email address">
+          <button type="submit">Subscribe</button>
+        </form>
+        <div class="footer-social" role="navigation" aria-label="Social media links">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </div>
       </div>
     </div>
-  </div>
-
-  <!-- Sponsors & Credits -->
-  <div class="footer-sponsors" aria-label="Sponsors and Partners">
-    <p>Sponsored by Luxury Travels & Partners</p>
-    <div class="sponsor-logos">
-      <img src="sponsors/Screenshot 2025-08-18 164132.png" alt="Sponsor 1">
-      <img src="sponsors/Screenshot 2025-08-18 164141.png" alt="Sponsor 2">
-      <img src="sponsors/Screenshot 2025-08-18 164206.png" alt="Sponsor 3">
-      <img src="sponsors/Screenshot 2025-08-18 164213.png" alt="Sponsor 4">
-      <img src="sponsors/Screenshot 2025-08-18 164353.png" alt="Sponsor 5">
+    <!-- Sponsors & Credits -->
+    <div class="footer-sponsors">
+      <p>Sponsored by Luxury Travels & Partners</p>
+      <div class="sponsor-logos">
+        <img src="sponsors/image-one.png" alt="Sponsor 1">
+        <img src="sponsors/image-two.png" alt="Sponsor 2">
+        <img src="sponsors/image-three.png" alt="Sponsor 3">
+        <img src="sponsors/image-four.png" alt="Sponsor 4">
+        <img src="sponsors/image-five.png" alt="Sponsor 5">
+      </div>
     </div>
-  </div>
-
-  <!-- Footer Bottom -->
-  <div class="footer-bottom">
-    <p>&copy; 2025 Elementa Voyagés. All Rights Reserved.</p>
-  </div>
-</footer>
-
-
-
-
-
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+      <p>&copy; 2025 Elementa Voyagés. All Rights Reserved.</p>
+    </div>
+  </footer>
   <!-- Decorative background shapes -->
   <div class="abstract-shape shape1"></div>
   <div class="abstract-shape shape2"></div>
