--- a/frost.html
+++ b/frost.html
@@ -1,223 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Frost – Elementa Voyagés</title>
-  <link rel="stylesheet" href="biome-style.css" />
+  <link rel="stylesheet" href="biome-style.css">
 </head>
 <body>
-
-<!-- Top header with logo and navigation -->
-<header class="top-header frost" role="banner" aria-label="The Waves biome header with logo and main navigation">
-  <div class="logo-container">
-    <!-- Logo with clear alt description -->
-    <a href="index.html" aria-label="Return to Elementa Voyagés home">
-      <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés logo" />
-    </a>
-  </div>
-  <!-- Navigation Links -->
-  <nav class="nav-links" role="navigation" aria-label="Primary navigation for The Waves biome page">
-    <a href="index.html" aria-label="Go to the Home page of Elementa Voyagés">Home</a>
-    <a href="test-explore.html" aria-label="Explore destinations across different biomes">Explore</a>
-    <a href="mailto:info@elementavoyages.com" aria-label="Send an email to Elementa Voyagés">Contact</a>
-  </nav>
-</header>
-
-
-
-
-
-<!-- FILTERS + GRID -->
-<section class="destination-filter" role="region" aria-label="Destination Filters and Grid">
-  <!-- Filter Bar -->
-  <div class="filter-bar" role="form" aria-label="Filter destinations">
-    <select id="family-select" aria-label="Select family or adult type">
-      <option value="">Family / Adult</option>
-      <option value="family">Family Friendly</option>
-      <option value="adult">Adult Only</option>
-    </select>
-
-    <select id="continent-select" aria-label="Select continent">
-      <option value="">Continent</option>
-      <option value="europe">Europe</option>
-      <option value="asia">Asia</option>
-      <option value="north-america">North America</option>
-      <option value="south-america">South America</option>
-      <option value="africa">Africa</option>
-      <option value="oceania">Oceania</option>
-      <option value="antarctica">Antarctica</option>
-    </select>
-
-    <select id="type-select" aria-label="Select holiday type">
-      <option value="">Holiday Type</option>
-      <option value="relaxing">Relaxing</option>
-      <option value="adventurous">Adventurous</option>
-    </select>
-
-    <button class="clear-btn" aria-label="Clear all filters">✖ Clear Filters</button>
-  </div>
-
-  <!-- Destination Grid -->
-  <div class="destination-grid" role="list" aria-label="Destination Cards">
-    <!-- Europe -->
-    <div class="destination-card" data-family="family" data-continent="europe" data-type="relaxing" role="listitem">
-      <a href="https://www.santaclausholidayvillage.fi/" target="_blank">
-        <img src="frost-biome/lapland.png" alt="Lapland, Sweden" />
-        <h3>Lapland, Sweden</h3>
+  <!-- Top header with logo and navigation -->
+  <header class="top-header frost" aria-label="The Waves biome header with logo and main navigation">
+    <div class="logo-container">
+      <!-- Logo with clear alt description -->
+      <a href="index.html" aria-label="Return to Elementa Voyagés home">
+        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés logo">
       </a>
     </div>
-    <div class="destination-card" data-family="adult" data-continent="europe" data-type="adventurous" role="listitem">
-      <a href="https://www.iceland.is/" target="_blank">
-        <img src="frost-biome/iceland.jpg" alt="Iceland Glaciers" />
-        <h3>Iceland Glaciers</h3>
-      </a>
+    <!-- Navigation Links -->
+    <nav class="nav-links" aria-label="Primary navigation for The Waves biome page">
+      <a href="index.html" aria-label="Go to the Home page of Elementa Voyagés">Home</a>
+      <a href="test-explore.html" aria-label="Explore destinations across different biomes">Explore</a>
+      <a href="mailto:info@elementavoyages.com" aria-label="Send an email to Elementa Voyagés">Contact</a>
+    </nav>
+  </header>
+  <!-- FILTERS + GRID -->
+  <section class="destination-filter" aria-label="Destination Filters and Grid">
+    <!-- Filter Bar -->
+    <div class="filter-bar">
+      <select id="family-select" aria-label="Select family or adult type">
+        <option value="">Family / Adult</option>
+        <option value="family">Family Friendly</option>
+        <option value="adult">Adult Only</option>
+      </select>
+      <select id="continent-select" aria-label="Select continent">
+        <option value="">Continent</option>
+        <option value="europe">Europe</option>
+        <option value="asia">Asia</option>
+        <option value="north-america">North America</option>
+        <option value="south-america">South America</option>
+        <option value="africa">Africa</option>
+        <option value="oceania">Oceania</option>
+        <option value="antarctica">Antarctica</option>
+      </select>
+      <select id="type-select" aria-label="Select holiday type">
+        <option value="">Holiday Type</option>
+        <option value="relaxing">Relaxing</option>
+        <option value="adventurous">Adventurous</option>
+      </select>
+      <button class="clear-btn" aria-label="Clear all filters">✖ Clear Filters</button>
     </div>
-
-    <!-- Asia -->
-    <div class="destination-card" data-family="family" data-continent="asia" data-type="relaxing" role="listitem">
-      <a href="https://www.japan.travel/en/uk/hokkaido/" target="_blank">
-        <img src="frost-biome/japan.jpg" alt="Hokkaido, Japan" />
-        <h3>Hokkaido, Japan</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="asia" data-type="adventurous" role="listitem">
-      <a href="https://www.nepal.travel/" target="_blank">
-        <img src="frost-biome/nepal.jpg" alt="Himalayas, Nepal" />
-        <h3>Himalayas, Nepal</h3>
-      </a>
-    </div>
-
-    <!-- North America -->
-    <div class="destination-card" data-family="family" data-continent="north-america" data-type="relaxing" role="listitem">
-      <a href="https://www.banfflakelouise.com/" target="_blank">
-        <img src="frost-biome/canada.jpg" alt="Banff, Canada" />
-        <h3>Banff, Canada</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="north-america" data-type="adventurous" role="listitem">
-      <a href="https://www.travelalaska.com/" target="_blank">
-        <img src="frost-biome/alaska.jpg" alt="Alaska Wilderness" />
-        <h3>Alaska Wilderness</h3>
-      </a>
-    </div>
-
-    <!-- South America -->
-    <div class="destination-card" data-family="family" data-continent="south-america" data-type="relaxing" role="listitem">
-      <a href="https://www.patagonia-argentina.com/" target="_blank">
-        <img src="frost-biome/patagonia.jpg" alt="Patagonia, Argentina" />
-        <h3>Patagonia, Argentina</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="south-america" data-type="adventurous" role="listitem">
-      <a href="https://www.chile.travel/en/" target="_blank">
-        <img src="frost-biome/chile.jpg" alt="Torres del Paine, Chile" />
-        <h3>Torres del Paine, Chile</h3>
-      </a>
-    </div>
-
-    <!-- Africa -->
-    <div class="destination-card" data-family="family" data-continent="africa" data-type="relaxing" role="listitem">
-      <a href="https://www.safaris-kenya.com/" target="_blank">
-        <img src="frost-biome/kenya.jpg" alt="Masai Mara, Kenya" />
-        <h3>Masai Mara, Kenya</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="africa" data-type="adventurous" role="listitem">
-      <a href="https://www.southafrica.net/" target="_blank">
-        <img src="frost-biome/kila.png" alt="Kilimanjaro" />
-        <h3>Kilimanjaro</h3>
-      </a>
-    </div>
-
-    <!-- Oceania -->
-    <div class="destination-card" data-family="family" data-continent="oceania" data-type="relaxing" role="listitem">
-      <a href="https://www.newzealand.com/int/plan/places-to-go/south-island/" target="_blank">
-        <img src="frost-biome/new-zealand.jpg" alt="South Island, New Zealand" />
-        <h3>South Island, New Zealand</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="oceania" data-type="adventurous" role="listitem">
-      <a href="https://www.australia.com/en" target="_blank">
-        <img src="frost-biome/tasmania.jpg" alt="Tasmania, Australia" />
-        <h3>Tasmania, Australia</h3>
-      </a>
-    </div>
-
-    <!-- Antarctica -->
-    <div class="destination-card" data-family="family" data-continent="antarctica" data-type="relaxing" role="listitem">
-      <a href="https://www.quarkexpeditions.com/en/antarctica" target="_blank">
-        <img src="frost-biome/cruise.jpg" alt="Antarctica Cruise" />
-        <h3>Antarctica Cruise</h3>
-      </a>
-    </div>
-    <div class="destination-card" data-family="adult" data-continent="antarctica" data-type="adventurous" role="listitem">
-      <a href="https://www.antarctic-expeditions.com/" target="_blank">
-        <img src="frost-biome/expo.png" alt="Antarctica Expedition" />
-        <h3>Antarctica Expedition</h3>
-      </a>
-    </div>
-  </div>
-</section>
-
-
-<footer class="site-footer" role="contentinfo" aria-label="Website Footer">
-  <div class="footer-container">
-    <!-- Column 1: Logo & About -->
-    <div class="footer-column" role="region" aria-label="About Elementa Voyagés">
-      <div class="footer-logo">
-        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo">
+    <!-- Destination Grid -->
+    <div class="destination-grid" role="list" aria-label="Destination Cards">
+      <!-- Europe -->
+      <div class="destination-card" data-family="family" data-continent="europe" data-type="relaxing" role="listitem">
+        <a href="https://www.santaclausholidayvillage.fi/" target="_blank">
+          <img src="frost-biome/lapland.png" alt="Lapland, Sweden">
+          <h3>Lapland, Sweden</h3>
+        </a>
       </div>
-      <p class="footer-tagline">
-        Curated journeys, luxurious stays, and unforgettable experiences.
-      </p>
-    </div>
-    
-    <!-- Column 2: Quick Links -->
-    <div class="footer-column" role="navigation" aria-label="Footer Quick Links">
-      <h4>Explore</h4>
-      <ul class="footer-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="test-explore.html">Destinations</a></li>
-        <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
-      </ul>
-    </div>
-
-    <!-- Column 3: Newsletter & Social -->
-    <div class="footer-column" role="region" aria-label="Newsletter and Social Links">
-      <h4>Stay Connected</h4>
-      <p>Join our newsletter for travel inspiration & exclusive offers.</p>
-      <form class="footer-newsletter" role="form" aria-label="Subscribe to newsletter">
-        <label class="visually-hidden" for="newsletter-email">Email Address</label>
-        <input id="newsletter-email" type="email" placeholder="Enter your email">
-        <button type="submit">Subscribe</button>
-      </form>
-      <div class="footer-social" role="navigation" aria-label="Social Media Links">
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+      <div class="destination-card" data-family="adult" data-continent="europe" data-type="adventurous" role="listitem">
+        <a href="https://www.iceland.is/" target="_blank">
+          <img src="frost-biome/iceland.jpg" alt="Iceland Glaciers">
+          <h3>Iceland Glaciers</h3>
+        </a>
+      </div>
+      <!-- Asia -->
+      <div class="destination-card" data-family="family" data-continent="asia" data-type="relaxing" role="listitem">
+        <a href="https://www.japan.travel/en/uk/hokkaido/" target="_blank">
+          <img src="frost-biome/japan.jpg" alt="Hokkaido, Japan">
+          <h3>Hokkaido, Japan</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="asia" data-type="adventurous" role="listitem">
+        <a href="https://www.nepal.travel/" target="_blank">
+          <img src="frost-biome/nepal.jpg" alt="Himalayas, Nepal">
+          <h3>Himalayas, Nepal</h3>
+        </a>
+      </div>
+      <!-- North America -->
+      <div class="destination-card" data-family="family" data-continent="north-america" data-type="relaxing" role="listitem">
+        <a href="https://www.banfflakelouise.com/" target="_blank">
+          <img src="frost-biome/canada.jpg" alt="Banff, Canada">
+          <h3>Banff, Canada</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="north-america" data-type="adventurous" role="listitem">
+        <a href="https://www.travelalaska.com/" target="_blank">
+          <img src="frost-biome/alaska.jpg" alt="Alaska Wilderness">
+          <h3>Alaska Wilderness</h3>
+        </a>
+      </div>
+      <!-- South America -->
+      <div class="destination-card" data-family="family" data-continent="south-america" data-type="relaxing" role="listitem">
+        <a href="https://www.patagonia-argentina.com/" target="_blank">
+          <img src="frost-biome/patagonia.jpg" alt="Patagonia, Argentina">
+          <h3>Patagonia, Argentina</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="south-america" data-type="adventurous" role="listitem">
+        <a href="https://www.chile.travel/en/" target="_blank">
+          <img src="frost-biome/chile.jpg" alt="Torres del Paine, Chile">
+          <h3>Torres del Paine, Chile</h3>
+        </a>
+      </div>
+      <!-- Africa -->
+      <div class="destination-card" data-family="family" data-continent="africa" data-type="relaxing" role="listitem">
+        <a href="https://www.safaris-kenya.com/" target="_blank">
+          <img src="frost-biome/kenya.jpg" alt="Masai Mara, Kenya">
+          <h3>Masai Mara, Kenya</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="africa" data-type="adventurous" role="listitem">
+        <a href="https://www.southafrica.net/" target="_blank">
+          <img src="frost-biome/kila.png" alt="Kilimanjaro">
+          <h3>Kilimanjaro</h3>
+        </a>
+      </div>
+      <!-- Oceania -->
+      <div class="destination-card" data-family="family" data-continent="oceania" data-type="relaxing" role="listitem">
+        <a href="https://www.newzealand.com/int/plan/places-to-go/south-island/" target="_blank">
+          <img src="frost-biome/new-zealand.jpg" alt="South Island, New Zealand">
+          <h3>South Island, New Zealand</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="oceania" data-type="adventurous" role="listitem">
+        <a href="https://www.australia.com/en" target="_blank">
+          <img src="frost-biome/tasmania.jpg" alt="Tasmania, Australia">
+          <h3>Tasmania, Australia</h3>
+        </a>
+      </div>
+      <!-- Antarctica -->
+      <div class="destination-card" data-family="family" data-continent="antarctica" data-type="relaxing" role="listitem">
+        <a href="https://www.quarkexpeditions.com/en/antarctica" target="_blank">
+          <img src="frost-biome/cruise.jpg" alt="Antarctica Cruise">
+          <h3>Antarctica Cruise</h3>
+        </a>
+      </div>
+      <div class="destination-card" data-family="adult" data-continent="antarctica" data-type="adventurous" role="listitem">
+        <a href="https://www.antarctic-expeditions.com/" target="_blank">
+          <img src="frost-biome/expo.png" alt="Antarctica Expedition">
+          <h3>Antarctica Expedition</h3>
+        </a>
       </div>
     </div>
-  </div>
-
-  <!-- Sponsors & Credits -->
-  <div class="footer-sponsors" role="region" aria-label="Sponsors">
-    <p>Sponsored by Luxury Travels & Partners</p>
-    <div class="sponsor-logos">
-      <img src="sponsors/Screenshot 2025-08-18 164132.png" alt="Sponsor 1">
-      <img src="sponsors/Screenshot 2025-08-18 164141.png" alt="Sponsor 2">
-      <img src="sponsors/Screenshot 2025-08-18 164206.png" alt="Sponsor 3">
-      <img src="sponsors/Screenshot 2025-08-18 164213.png" alt="Sponsor 4">
-      <img src="sponsors/Screenshot 2025-08-18 164353.png" alt="Sponsor 5">
+  </section>
+  <footer class="site-footer" aria-label="Website Footer">
+    <div class="footer-container">
+      <!-- Column 1: Logo & About -->
+      <div class="footer-column" role="region" aria-label="About Elementa Voyagés">
+        <div class="footer-logo">
+          <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Elementa Voyagés Logo">
+        </div>
+        <p class="footer-tagline">
+          Curated journeys, luxurious stays, and unforgettable experiences.
+        </p>
+      </div>    
+      <!-- Column 2: Quick Links -->
+      <div class="footer-column" role="navigation" aria-label="Footer Quick Links">
+        <h4>Explore</h4>
+        <ul class="footer-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="test-explore.html">Destinations</a></li>
+          <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Column 3: Newsletter & Social -->
+      <div class="footer-column" role="region" aria-label="Newsletter and Social Links">
+        <h4>Stay Connected</h4>
+        <p>Join our newsletter for travel inspiration & exclusive offers.</p>
+        <form class="footer-newsletter" aria-label="Subscribe to newsletter">
+          <label class="visually-hidden" for="newsletter-email">Email Address</label>
+          <input id="newsletter-email" type="email" placeholder="Enter your email">
+          <button type="submit">Subscribe</button>
+        </form>
+        <div class="footer-social" role="navigation" aria-label="Social Media Links">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </div>
+      </div>
     </div>
-  </div>
-
-  <div class="footer-bottom">
-    <p>&copy; 2025 Elementa Voyagés. All Rights Reserved.</p>
-  </div>
-</footer>
-
+    <!-- Sponsors & Credits -->
+    <div class="footer-sponsors" role="region" aria-label="Sponsors">
+      <p>Sponsored by Luxury Travels & Partners</p>
+      <div class="sponsor-logos">
+          <img src="sponsors/image-one.png" alt="Sponsor 1">
+          <img src="sponsors/image-two.png" alt="Sponsor 2">
+          <img src="sponsors/image-three.png" alt="Sponsor 3">
+          <img src="sponsors/image-four.png" alt="Sponsor 4">
+          <img src="sponsors/image-five.png" alt="Sponsor 5">
+        </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Elementa Voyagés. All Rights Reserved.</p>
+    </div>
+  </footer>
 <script src="biome.js"></script>
 </body>
 </html>
