--- a/shanghai.html
+++ b/shanghai.html
@@ -9,83 +9,67 @@
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/@googlemaps/extended-component-library/0.6.11/index.min.js"></script>
 </head>
 <body>
-
-<header class="top-header" role="banner" aria-label="Site Header">
-  <!-- Logo Container -->
-  <div class="logo-container">
-    <a href="index.html">
-      <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Logo" aria-label="Elementa Voyagés Logo">
-    </a>
-  </div>
-
-  <!-- Navigation Links -->
-  <nav class="nav-links" role="navigation" aria-label="Main navigation">
-    <a href="index.html" aria-label="Go to Home page">Home</a>
-    <a href="test-explore.html" aria-label="Go to Explore page">Explore</a>
-    <a href="mailto:info@elementavoyages.com" aria-label="Send email to Elementa Voyagés">Contact</a>
-  </nav>
-</header>
-
-<!-- Page Title -->
-<h1 id="city-title" aria-label="Shanghai city map and hotel information">Explore Shanghai</h1>
-
-
-<!-- Main Content: Map Section -->
-<div class="main-content" aria-label="Main map and hotel listings for Shanghai">
-  <div class="map-section" aria-label="Shanghai interactive map section">
-    <!-- Google Maps API Loader: loads the maps component -->
-    <gmpx-api-loader key="AIzaSyCNGtQw7HZPR1UTtfZFG_5FOKpEzZ8wn_k" solution-channel="GMP_GE_mapsandplacesautocomplete_v2"></gmpx-api-loader>
-    
-    <!-- Google Map Centered on Shanghai -->
-    <gmp-map id="map" center="31.2304,121.4737" zoom="14" aria-label="Interactive map centered on Shanghai">
-      <!-- Place Picker for Searching Cities or Addresses -->
-      <div slot="control-block-start-inline-start" class="place-picker-container" aria-label="Map search control">
-        <gmpx-place-picker placeholder="Search a city or address" aria-label="Search a city or address in Shanghai"></gmpx-place-picker>
-      </div>
-    </gmp-map>
-  </div>
-  
-  <!-- Sidebar: Recommended Hotels -->
-  <div class="sidebar" aria-label="Recommended hotels in Shanghai">
-    <h2>Recommended Hotels</h2>
-
-    <div class="hotel-links">
-      <!-- Individual hotel cards with images, headings, and links -->
-      <a href="https://www.hyatt.com/zh-CN/hotel/china/grand-hyatt-shanghai/shagh" target="_blank" class="hotel-card" aria-label="Grand Hyatt Shanghai">
-        <img src="shanghai/Screenshot 2025-08-19 172120.png" alt="Grand Hyatt Shanghai" aria-label="Image of Grand Hyatt Shanghai">
-        <h3>Grand Hyatt Shanghai</h3>
-      </a>
-
-      <a href="https://www.hyatt.com/grand-hyatt/zh-CN/shang-hyatt-on-the-bund-shanghai" target="_blank" class="hotel-card" aria-label="Hyatt on the Bund Hotel">
-        <img src="shanghai/Screenshot 2025-08-19 172213.png" alt="Hyatt on the Bund Hotel" aria-label="Image of Hyatt on the Bund Hotel">
-        <h3>Hyatt on the Bund Hotel</h3>
-      </a>
-
-      <a href="https://www.mandarinoriental.com/en/shanghai/pudong/offers?src=ps.brand.mopud.ggl&gclsrc=aw.ds&gad_source=1&gad_campaignid=20814215455&gclid=Cj0KCQjwwZDFBhCpARIsAB95qO3-yKum76rDgVry1qnP2w-rB6GqEA7C32mAKiJmrC0VXEpKOooGlKYaAq0OEALw_wcB" target="_blank" class="hotel-card" aria-label="Mandarin Oriental Pudong">
-        <img src="shanghai/Screenshot 2025-08-19 172506.png" alt="Mandarin Oriental Pudong" aria-label="Image of Mandarin Oriental Pudong">
-        <h3>Mandarin Oriental Pudong</h3>
-      </a>
-
-      <a href="https://waldorfastoriahotels.com.cn/zh-cn/hotel/shanghai/waldorf-astoria-shanghai-SHAWAWA/index.html" target="_blank" class="hotel-card" aria-label="Waldorf Astoria Shanghai on the Bund">
-        <img src="shanghai/Screenshot 2025-08-19 172609.png" alt="Waldorf Astoria Shanghai on the Bund" aria-label="Image of Waldorf Astoria Shanghai on the Bund">
-        <h3>Waldorf Astoria Shanghai on the Bund</h3>
-      </a>
-
-      <a href="https://www.hotel.com.au/shanghai/shanghai-meego-qingwen-hotel.htm" target="_blank" class="hotel-card" aria-label="Meego Qingwen Hotel">
-        <img src="shanghai/Screenshot 2025-08-19 172825.png" alt="Meego Qingwen Hotel" aria-label="Image of Meego Qingwen Hotel">
-        <h3>Meego Qingwen Hotel</h3>
-      </a>
-
-      <a href="https://www.marriott.com.cn/hotels/shamc-shanghai-marriott-marquis-city-centre/overview/" target="_blank" class="hotel-card" aria-label="Shanghai Marriott Hotel City Centre">
-        <img src="shanghai/Screenshot 2025-08-19 172955.png" alt="Shanghai Marriott Hotel City Centre" aria-label="Image of Shanghai Marriott Hotel City Centre">
-        <h3>Shanghai Marriott Hotel City Centre</h3>
+  <header class="top-header" aria-label="Site Header">
+    <!-- Logo Container -->
+    <div class="logo-container">
+      <a href="index.html">
+        <img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Logo" aria-label="Elementa Voyagés Logo">
       </a>
     </div>
+    <!-- Navigation Links -->
+    <nav class="nav-links" aria-label="Main navigation">
+      <a href="index.html" aria-label="Go to Home page">Home</a>
+      <a href="test-explore.html" aria-label="Go to Explore page">Explore</a>
+      <a href="mailto:info@elementavoyages.com" aria-label="Send email to Elementa Voyagés">Contact</a>
+    </nav>
+  </header>
+  <!-- Page Title -->
+  <h1 id="city-title" aria-label="Shanghai city map and hotel information">Explore Shanghai</h1>
+  <!-- Main Content: Map Section -->
+  <div class="main-content">
+    <div class="map-section">
+      <!-- Google Maps API Loader: loads the maps component -->
+      <gmpx-api-loader key="AIzaSyCNGtQw7HZPR1UTtfZFG_5FOKpEzZ8wn_k" solution-channel="GMP_GE_mapsandplacesautocomplete_v2"></gmpx-api-loader>    
+      <!-- Google Map Centered on Shanghai -->
+      <gmp-map id="map" center="31.2304,121.4737" zoom="14">
+        <!-- Place Picker for Searching Cities or Addresses -->
+        <div slot="control-block-start-inline-start" class="place-picker-container">
+          <gmpx-place-picker placeholder="Search a city or address"></gmpx-place-picker>
+        </div>
+      </gmp-map>
+    </div>
+    <!-- Sidebar: Recommended Hotels -->
+    <div class="sidebar">
+      <h2>Recommended Hotels</h2>
+      <div class="hotel-links">
+        <!-- Individual hotel cards with images, headings, and links -->
+        <a href="https://www.hyatt.com/zh-CN/hotel/china/grand-hyatt-shanghai/shagh" target="_blank" class="hotel-card" aria-label="Grand Hyatt Shanghai">
+          <img src="shanghai/image-one.png" alt="Grand Hyatt Shanghai" aria-label="Image of Grand Hyatt Shanghai">
+          <h3>Grand Hyatt Shanghai</h3>
+        </a>
+        <a href="https://www.hyatt.com/grand-hyatt/zh-CN/shang-hyatt-on-the-bund-shanghai" target="_blank" class="hotel-card" aria-label="Hyatt on the Bund Hotel">
+          <img src="shanghai/image-two.png" alt="Hyatt on the Bund Hotel" aria-label="Image of Hyatt on the Bund Hotel">
+          <h3>Hyatt on the Bund Hotel</h3>
+        </a>
+        <a href="https://www.mandarinoriental.com/en/shanghai/pudong/offers?src=ps.brand.mopud.ggl&gclsrc=aw.ds&gad_source=1&gad_campaignid=20814215455&gclid=Cj0KCQjwwZDFBhCpARIsAB95qO3-yKum76rDgVry1qnP2w-rB6GqEA7C32mAKiJmrC0VXEpKOooGlKYaAq0OEALw_wcB" target="_blank" class="hotel-card" aria-label="Mandarin Oriental Pudong">
+          <img src="shanghai/image-three.png" alt="Mandarin Oriental Pudong" aria-label="Image of Mandarin Oriental Pudong">
+          <h3>Mandarin Oriental Pudong</h3>
+        </a>
+        <a href="https://waldorfastoriahotels.com.cn/zh-cn/hotel/shanghai/waldorf-astoria-shanghai-SHAWAWA/index.html" target="_blank" class="hotel-card" aria-label="Waldorf Astoria Shanghai on the Bund">
+          <img src="shanghai/image-four.png" alt="Waldorf Astoria Shanghai on the Bund" aria-label="Image of Waldorf Astoria Shanghai on the Bund">
+          <h3>Waldorf Astoria Shanghai on the Bund</h3>
+        </a>
+        <a href="https://www.hotel.com.au/shanghai/shanghai-meego-qingwen-hotel.htm" target="_blank" class="hotel-card" aria-label="Meego Qingwen Hotel">
+          <img src="shanghai/image-five.png" alt="Meego Qingwen Hotel" aria-label="Image of Meego Qingwen Hotel">
+          <h3>Meego Qingwen Hotel</h3>
+        </a>
+        <a href="https://www.marriott.com.cn/hotels/shamc-shanghai-marriott-marquis-city-centre/overview/" target="_blank" class="hotel-card" aria-label="Shanghai Marriott Hotel City Centre">
+          <img src="shanghai/image-six.png" alt="Shanghai Marriott Hotel City Centre" aria-label="Image of Shanghai Marriott Hotel City Centre">
+          <h3>Shanghai Marriott Hotel City Centre</h3>
+        </a>
+      </div>
+    </div>
   </div>
-</div>
-
-
-
 <script type="module">
   // Initialize the map and place picker after the custom element is defined
   async function init() {
@@ -130,6 +114,5 @@
   // Run init function once DOM is fully loaded
   document.addEventListener('DOMContentLoaded', init);
 </script>
-
 </body>
 </html>
