Update README, styles.css, and test-explore.html; update explore images (add overlay, remove vr33s, rename tides)

--- a/test-explore.html
+++ b/test-explore.html
@@ -12,7 +12,7 @@
     <div class="bg-slide active" style="background-image: url('explore-image/snow.jpg');"></div>
     <div class="bg-slide" style="background-image: url('explore-image/jungle.jpg');"></div>
     <div class="bg-slide" style="background-image: url('explore-image/fire.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('explore-image/pexels-mikhail-nilov-8356067.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('explore-image/tides.jpg');"></div>
   </div>
   <!-- Logo and Navigation on top of slideshow -->
   <header class="top-header" aria-label="Site header with logo and navigation">
