Update desert.html, frost.html, index.html, jungle.html, and tides.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <h4 id="footer-links-title">Explore</h4>
         <ul class="footer-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
           <li><a href="test-explore.html">Destinations</a></li>
           <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
         </ul>
