--- a/jungle.html
+++ b/jungle.html
@@ -146,7 +146,7 @@
         <h4>Explore</h4>
         <ul class="footer-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
           <li><a href="test-explore.html">Destinations</a></li>
           <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
         </ul>
