Added SEO meta tags and fixed link hrefs

--- a/about-us.html
+++ b/about-us.html
@@ -2,8 +2,9 @@
 
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="description" content="Learn about Elementa Voyages, our passionate team, and our mission to inspire unforgettable travel experiences around the world.">
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>About Us | Elementa Voyagés</title>
 <!-- Link to about page stylesheet -->
 <link href="about.css" rel="stylesheet"/>
