--- a/argentina.html
+++ b/argentina.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Discover Argentina with Elementa Voyages: from Patagonia’s glaciers to Buenos Aires’ vibrant culture, plan your perfect trip.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Patagonia Map &amp; Hotels</title>
