--- a/frost.html
+++ b/frost.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Experience icy landscapes and frosty adventures with Elementa Voyages: your guide to unforgettable winter destinations.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>The Frost – Elementa Voyagés</title>
