--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Elementa Voyages: Explore curated travel inspiration, destination guides, and breathtaking photography for your next adventure.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Elementa Voyagés</title>
