--- a/jungle.html
+++ b/jungle.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Dive into the heart of jungles worldwide with Elementa Voyages: wildlife, adventure, and travel insights for jungle explorers.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>The Jungle – Elementa Voyagés</title>
