--- a/maldives.html
+++ b/maldives.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Plan your dream Maldives escape with Elementa Voyages: luxury resorts, turquoise waters, and travel tips for the ultimate getaway.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Maldives Map &amp; Hotels</title>
