--- a/paris.html
+++ b/paris.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Discover Paris with Elementa Voyages: iconic landmarks, hidden gems, and travel advice for an unforgettable city experience.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Paris Map &amp; Hotels</title>
