--- a/santorini.html
+++ b/santorini.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Explore Santorini with Elementa Voyages: stunning sunsets, whitewashed buildings, and travel guides for your perfect Greek island trip.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Destination Map &amp; Hotels</title>
