--- a/shanghai.html
+++ b/shanghai.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Experience Shanghai with Elementa Voyages: a mix of modern skyscrapers, traditional culture, and must-see attractions.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Shanghai Map &amp; Hotels</title>
