--- a/test-explore.html
+++ b/test-explore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
+<meta name="description" content="Test and explore Elementa Voyages' features, layouts, and travel inspiration ideas in this experimental page.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Biome Background Slideshow</title>
