--- a/tides.html
+++ b/tides.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Discover tidal destinations with Elementa Voyages: beaches, waves, and water adventures for travel enthusiasts.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>The Waves – Elementa Voyagés</title>
