--- a/desert.html
+++ b/desert.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<meta name="description" content="Explore the world's most stunning deserts with Elementa Voyages: travel guides, breathtaking images, and adventure tips.">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>The Desert – Elementa Voyagés</title>
