Fix sponsor image dimensions for correct aspect ratio

--- a/about-us.html
+++ b/about-us.html
@@ -123,11 +123,11 @@
 <div class="footer-sponsors">
 <p>Sponsored by Luxury Travels &amp; Partners</p>
 <div class="sponsor-logos">
-<img alt="Sponsor 1" src="sponsors/image-one.webp"/>
-<img alt="Sponsor 2" src="sponsors/image-two.webp"/>
-<img alt="Sponsor 3" src="sponsors/image-three.webp"/>
-<img alt="Sponsor 4" src="sponsors/image-four.webp"/>
-<img alt="Sponsor 5" src="sponsors/image-five.webp"/>
+<img alt="Sponsor 1" src="sponsors/image-one.webp" width="64" height="33"/>
+<img alt="Sponsor 2" src="sponsors/image-two.webp" width="63" height="43"/>
+<img alt="Sponsor 3" src="sponsors/image-three.webp" width="54" height="44"/>
+<img alt="Sponsor 4" src="sponsors/image-four.webp" width="85" height="37"/>
+<img alt="Sponsor 5" src="sponsors/image-five.webp" width="82" height="48"/>
 </div>
 </div>
 <!-- Footer Bottom -->
